k8s/network-of-terms-demo/network-of-terms-demo-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: network-of-terms-demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: network-of-terms-demo
  template:
    metadata:
      labels:
        app: network-of-terms-demo
    spec:
      containers:
        - name: app
          image: ghcr.io/netwerk-digitaal-erfgoed/network-of-terms-demo
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: github-creds
