k8s/network-of-terms-demo/network-of-terms-demo-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: network-of-terms-demo
  annotations:
    cert-manager.io/issuer: harica-nde
    cert-manager.io/usages: server auth,digital signature,client auth
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  tls:
    - hosts:
        - demo.nde-dev.ms4.surfsara.nl
      secretName: termennetwerk-tls-demo
  rules:
    - host: demo.nde-dev.ms4.surfsara.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: network-of-terms-demo
                port:
                  number: 80
